# claude-desktop-windows-updater

./: .gitignore  Cargo.toml  README.md  app.manifest  build.rs
.github/workflows/: release.yml
scripts/: package-release.ps1
src/: claude.rs  cleanup.rs  config.rs  dark_window.rs  dialogs.rs  extract.rs  junction.rs  main.rs  path_dialog.rs  registry.rs  safety.rs  shortcut.rs  uninstall.rs
ui/: app.slint
