[package]
name = "claude-desktop-updater"
version = "0.1.2"
edition = "2021"
rust-version = "1.80"
description = "Claude Desktop Updater for Windows"
license = "MIT"

[[bin]]
name = "claude-desktop-updater"
path = "src/main.rs"

[dependencies]
slint = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots", "json"] }
directories = "5"
quick-xml = "0.39"
encoding_rs = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]}

[build-dependencies]
slint-build = "1.8"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
